Fix: remove margin-bottom from .form-group to fix alignment in phase-inputs

--- a/src/components/FormInput.css
+++ b/src/components/FormInput.css
@@ -1,5 +1,4 @@
 .form-group {
-  margin-bottom: 16px;
   flex: 1;
 }
 
